# otter-db

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  alembic.ini  development.md  installation.md  justfile  pyproject.toml
.cursor/rules/: python.mdc
.github/workflows/: ci.yml
alembic/: env.py
devtools/: agent_rules.py  clean.py  lint.py
notebooks/: README.md
scripts/: tenants.py
src/my_package/: __init__.py
src/otter/: __init__.py
src/otter_db/models/: __init__.py  alarm.py  base.py  comment.py  controller.py  cost_saving.py  event.py  schedule.py  sensor.py
