[build-system]
requires = ["uv_build>=0.9.6,<0.11.0"]
build-backend = "uv_build"

[project]
name = "otter-db"
version = "0.0.1"
description = "Internal library for Otter Intelligence: DB management and modelling [DEV BUILD - NOT FOR PRODUCTION]"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }  # Reference proprietary LICENSE file
authors = [{ name = "Otter Intelligence Engineering", email = "info@otterintelligence.nl" }]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Development Status :: 2 - Pre-Alpha",
    "Private :: Do Not Upload",
]
dependencies = [
    "alembic >= 1.7.0,<2.0.0",
    "alembic-postgresql-enum >= 1.10.0,<2.0.0",
    "sqlalchemy >= 2.0.0,<3.0.0",
    "psycopg2-binary >= 2.9.0,<3.0.0",
]


[project.urls]
"Repository" = "https://github.com/HypersoniqTech/otter-db"  # Private/internal


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.1",
    "ty>=0.0.17",
    "pre-commit>=4.5.1",
    "sqlacodegen>=3.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"  # Matches requires-python
include = ["src/**", "tests/**", "scripts/**", "alembic/env.py"]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "docs",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and more
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules if needed
ignore = [
    "E501",  # Line too long (handled by formatter)
    "N815", # Mixed case variable in class scope (allow for some column names)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Docstring configuration (NumPy style)
pydocstyle = { convention = "numpy" }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Auto-format docstrings
docstring-code-format = true
docstring-code-line-length = 88

# ty configuration - Astral's fast type checker (replaces mypy)
# Docs: https://docs.astral.sh/ty/
[tool.ty.environment]
python-version = "3.11"
root = ["."]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["build", "dist", ".venv", "venv", "htmlcov", "**/__pycache__"]

[tool.ty.terminal]
output-format = "full"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]